tests/baselines/reference/exportAssignmentTopLevelEnumdule.errors.txt
foo_1.ts(4,2): error TS2322: Type 'number' is not assignable to type 'foo'.


==== foo_1.ts (1 errors) ====
    import foo = require("./foo_0");
    var color: foo;
    if(color === foo.green){
    	color = foo.answer;
    	~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'foo'.
    }
    
==== foo_0.ts (0 errors) ====
    enum foo {
    	red, green, blue
    }
    module foo {
    	export var answer = 42;
    }
    export = foo;
    